--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "bugs": {
     "url": "https://github.com/drewhjava/gulp-angular-starter/issues"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "event-stream": "^3.1.5",
     "gulp": "^3.8.1",
@@ -34,15 +33,16 @@
     "gulp-concat": "^2.2.0",
     "gulp-connect": "^2.0.5",
     "gulp-filter": "^0.5.0",
-    "gulp-inject": "^0.4.1",
     "gulp-karma": "0.0.4",
     "gulp-load-plugins": "^0.5.1",
+    "gulp-manifest": "0.0.5",
     "gulp-minify-css": "^0.3.5",
     "gulp-minify-html": "^0.1.3",
     "gulp-ngmin": "^0.3.0",
+    "gulp-print": "^1.1.0",
     "gulp-rev": "^0.4.1",
+    "gulp-spa": "^0.2.2",
     "gulp-uglify": "^0.3.1",
-    "gulp-usemin": "^0.3.5",
     "gulp-util": "^2.2.17",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
